--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 * {
   box-sizing: border-box;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   outline: none;
   font-family: "notoKrR", sans-serif;
 }
