--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -11,6 +11,11 @@ body {
   background-color: rgb(239, 239, 239);
 }
 
+body > div:first-of-type {
+  min-height: 100vh;
+  position: relative;
+}
+
 button {
   outline: none;
   text-shadow: none;
